--- a/projects/projects-weekly/project-02/OnlineStoreManager.ipynb
+++ b/projects/projects-weekly/project-02/OnlineStoreManager.ipynb
@@ -322,6 +322,15 @@
     "\n",
     "Obviously, not everyone wants to create and manage drum stores (I don't see why...), and so there are certainly opportunities to create much more flexibility in the OSM by allowing users to dictate their own _type_ of store as well as determine the items to be sold in their inventory. Additional perks like item prices could also be thrown into the mix - a 'zero cent store' probably won't be in business for too long."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
