--- a/projects/projects-weekly/project-02/OnlineStoreManager.ipynb
+++ b/projects/projects-weekly/project-02/OnlineStoreManager.ipynb
@@ -78,12 +78,11 @@
     "    \n",
     "class Customer(object):\n",
     "    \"\"\"The Customer class creates and manages each customer's purchasing history\"\"\"\n",
-    "    DEFAULT_HISTORY = {'cymbal': 0, 'drumsticks': 0, 'snare drum': 0,\n",
-    "                       'bass drum': 0, 'floor tom': 0, 'rack tom': 0}\n",
     "    \n",
     "    def __init__(self, name, history=None):\n",
     "        self.name = name\n",
-    "        self.history = history or self.DEFAULT_HISTORY   # If no history exists, use the default history\n",
+    "        self.history= {'cymbal': 0, 'drumsticks': 0, 'snare drum': 0,\n",
+    "                       'bass drum': 0, 'floor tom': 0, 'rack tom': 0}\n",
     "\n",
     "    # Add item to purchase history\n",
     "    def purchase(self, product, amount):\n",
@@ -153,7 +152,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-3-bfb0c8921a4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdrum_store\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpurchase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'drumsticks'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'John'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-af02b5e8eaef>\u001b[0m in \u001b[0;36mpurchase\u001b[0;34m(self, product, amount, customer)\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;31m# If statement to check if enough items in stock to sell. If there is, sell it!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mamount\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Too few items in stock.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mamount\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-ef443f17bec1>\u001b[0m in \u001b[0;36mpurchase\u001b[0;34m(self, product, amount, customer)\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;31m# If statement to check if enough items in stock to sell. If there is, sell it!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mamount\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Too few items in stock.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mamount\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minventory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mRuntimeError\u001b[0m: Too few items in stock."
      ]
     }
@@ -284,9 +283,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "John {'drumsticks': 3, 'cymbal': 3, 'floor tom': 2, 'rack tom': 3, 'bass drum': 2, 'snare drum': 1}\n",
-      "Ringo {'drumsticks': 3, 'cymbal': 3, 'floor tom': 2, 'rack tom': 3, 'bass drum': 2, 'snare drum': 1}\n",
-      "Neil {'drumsticks': 3, 'cymbal': 3, 'floor tom': 2, 'rack tom': 3, 'bass drum': 2, 'snare drum': 1}\n"
+      "John {'drumsticks': 3, 'cymbal': 3, 'floor tom': 0, 'rack tom': 0, 'bass drum': 0, 'snare drum': 0}\n",
+      "Ringo {'drumsticks': 0, 'cymbal': 0, 'floor tom': 0, 'rack tom': 0, 'bass drum': 0, 'snare drum': 1}\n",
+      "Neil {'drumsticks': 0, 'cymbal': 0, 'floor tom': 2, 'rack tom': 3, 'bass drum': 2, 'snare drum': 0}\n"
      ]
     }
    ],
@@ -320,7 +319,7 @@
     "\n",
     "As with any project, there are a _slew_ of directions we can take with this. As someone who likes making complex things easy to use, I see some obvious steps to take in making the OSM more user-friendly. Creating additional user prompts and incorporating them into variables, for example, could improve the user experience. And, once a higher volume of customers use the store, we could add some neat ways to summarize consumption.\n",
     "\n",
-    "Obviously, not everyone wants to create and manage drum stores (I don't see why...), and so there are certainly opportunities to create much more flexibility in the OSM by allowing users to dictate their own _type_ of store as well as determine the items to be sold in their inventory. Additional perks like item prices could also be thrown into the mix - a 'zero cent store' probably won't be in business for too long."
+    "Obviously, not everyone wants to create and manage drum stores (I don't see why...), and so there are certainly opportunities to create much more flexibility in the OSM by allowing users to dictate their own _type_ of store as well as determine the items to be sold in their inventory. Additional perks like item prices could also be thrown into the mix - a 'zero-cent store' probably won't be in business for too long."
    ]
   },
   {
