--- a/projects/projects-weekly/project-02/OnlineStoreManager.ipynb
+++ b/projects/projects-weekly/project-02/OnlineStoreManager.ipynb
@@ -291,11 +291,7 @@
    ],
    "source": [
     "for customer in drum_store.customers:\n",
-    "    print customer, customer.history\n",
-    "\n",
-    "#Note - I've identified a bug in my code in which after repeated runs, my code will output the same history for each\n",
-    "#customer. After several rounds of troubleshooting, I'm not sure what the problem is. Send thoughts on solutions\n",
-    "#my way!"
+    "    print customer, customer.history\n"
    ]
   },
   {
