--- a/projects/projects-weekly/project-04/Project-4-Bayes_Tidal_Regression_Update.ipynb
+++ b/projects/projects-weekly/project-04/Project-4-Bayes_Tidal_Regression_Update.ipynb
@@ -31,20 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/johnsnyder/anaconda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -59,7 +50,7 @@
     "%matplotlib inline\n",
     "\n",
     "class Bayes_Watch(object):\n",
-    "    \"\"\"Accepts four arguments: Atom log likelihood, prior log, input data, number of walkers (must be even), \n",
+    "    \"\"\"Accepts seven arguments: Atom log likelihood, prior log, input data, number of walkers (must be even), \n",
     "    number of steps, vertical offset of the MCMC and list of variables.\"\"\"\n",
     "    def __init__(self, atom, prior, data, walkers, steps, vertical_offset, variable_names):\n",
     "        atom_log = atom\n",
